added an integration test suite, handled some gemini reviews and added an endpoint
